--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "usb": "^2.9.0",
-    "zone.js": "~0.13.3"
+    "zone.js": "0.14.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.12",
@@ -39,6 +39,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "5.3.3"
   }
 }
