--- a/package.json
+++ b/package.json
@@ -10,35 +10,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.2.1",
-    "@angular/cdk": "^17.2.0",
-    "@angular/common": "^17.2.1",
-    "@angular/compiler": "^17.2.1",
-    "@angular/core": "^17.2.1",
-    "@angular/forms": "^17.2.1",
-    "@angular/material": "^17.2.0",
-    "@angular/material-moment-adapter": "^17.2.0",
-    "@angular/platform-browser": "^17.2.1",
-    "@angular/platform-browser-dynamic": "^17.2.1",
-    "@angular/router": "^17.2.1",
-    "ngx-mask": "^15.0.2",
-    "rxjs": "~7.5.0",
+    "@angular-devkit/build-webpack": "^0.1703.1",
+    "@angular/animations": "^17.3.1",
+    "@angular/cdk": "^17.3.1",
+    "@angular/common": "^17.3.1",
+    "@angular/compiler": "^17.3.1",
+    "@angular/core": "^17.3.1",
+    "@angular/forms": "^17.3.1",
+    "@angular/material": "^17.3.1",
+    "@angular/material-moment-adapter": "^17.3.1",
+    "@angular/platform-browser": "^17.3.1",
+    "@angular/platform-browser-dynamic": "^17.3.1",
+    "@angular/router": "^17.3.1",
+    "@swimlane/ngx-charts": "^20.5.0",
+    "@types/d3-selection": "^3.0.10",
+    "@types/d3-shape": "^3.1.6",
+    "ngx-mask": "^17.0.4",
+    "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "usb": "^2.9.0",
     "zone.js": "0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.0",
-    "@angular/cli": "^17.2.0",
-    "@angular/compiler-cli": "^17.2.1",
+    "@angular-devkit/build-angular": "^17.3.1",
+    "@angular/cli": "^17.3.1",
+    "@angular/compiler-cli": "^17.3.1",
+    "@types/d3-scale": "^4.0.8",
     "@types/jasmine": "~4.0.0",
     "@types/module-alias": "^2.0.1",
+    "http-proxy-middleware": "^2.0.6",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "5.3.3"
+    "postcss": "^8.4.31",
+    "semver": "^7.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.75.0"
   }
 }
